# connect4

./: .gitignore  README.md  pyproject.toml
Documents/: Maarittelydokumentti.md
Dokumentit/: Kayttoohje.md  Maarittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md
Dokumentit/Viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
Viikkoraportit/: viikkoraportti1.md
connectfour/: ai_pisteytys.py  logiikka.py  main.py  minimax.py  peli_logiikka.py  pelipoyta_logiikka.py  voiton_tarkastaja.py  vuoro.py
connectfour/tests/: test_logiikka.py  test_minimax.py  test_peli_logiikka.py  test_pelipoyta_logiikka.py  test_voiton_tarkastaja.py  test_vuoro.py
